--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 /.env.dev
 /.env.test
 /.env.prod
-/config/secrets/prod/prod.decrypt.private.php
+/config/secrets/*/prod.decrypt.private.php
 /public/bundles/
 /var/
 /vendor/
