--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,8 +13,19 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
+    # App\:
+    #     resource: '../src/'
+
+    Application\:
+        resource: '../src/Application/*'
+    Domain\:
+        resource: '../src/Domain/*'
+        exclude: '../src/Domain/Entity/'
+    Infrastructure\:
+        resource: '../src/Infrastructure/*'
+        exclude:
+            - '../src/Infrastructure/Symfony/Kernel.php'
+            - '../src/Infrastructure/Persistence/Migrations/*'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
