back to simple Symfony architecture

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,5 @@
 controllers:
     resource:
-        path: ../src/Infrastructure/Web/Controller/
-        namespace: Infrastructure\Web\Controller
+        path: ../src/Controller/
+        namespace: App\Controller
     type: attribute
