--- a/.env.dev.dist
+++ b/.env.dev.dist
@@ -1,4 +1,5 @@
 ###> symfony/framework-bundle ###
+APP_ENV=dev
 # Copier ce fichier vers .env.dev et générer un nouveau secret avec :
 # openssl rand -hex 32
 APP_SECRET=changeme_generate_with_openssl_rand_hex_32
