--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,13 @@
         "ext-iconv": "*",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.18",
-        "doctrine/doctrine-migrations-bundle": "^3.5",
+        "doctrine/doctrine-migrations-bundle": "^3.6",
         "doctrine/orm": "^3.5",
         "runtime/frankenphp-symfony": "^0.2.0",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
-        "symfony/object-mapper": "7.3.*",
         "symfony/runtime": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
         "symfony/yaml": "7.3.*",
@@ -36,10 +35,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/",
-            "Application\\": "src/Application/",
-            "Domain\\": "src/Domain/",
-            "Infrastructure\\": "src/Infrastructure/"
+            "App\\": "src/"
         }
     },
     "autoload-dev": {
@@ -80,6 +76,9 @@
         }
     },
     "require-dev": {
+        "phpunit/phpunit": "^12.4",
+        "symfony/browser-kit": "7.3.*",
+        "symfony/css-selector": "7.3.*",
         "symfony/maker-bundle": "^1.64"
     }
 }
